tests/miniJava/neg/004340_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public else int [] java ( ) { return 0 ; } }
